--- a/Medad_Rufus_Newman_CV.tex
+++ b/Medad_Rufus_Newman_CV.tex
@@ -179,21 +179,18 @@
       {Dyson}{Hullavington, UK}
       {Graduate Software Engineer}{Feb 2022 - Present}
       \resumeItemListStart
-        \resumeItem{Developing Bluetooth Low Energy (BLE) software for connectivity in C and Python.}
-        \resumeItem{Working with cryptography algorithms for Dyson products.}
-        \resumeItem{Implement embedded firmware unit testing using the Ceedling framework (Unity \& CMock).}
-        \resumeItem{Extensive automated testing experience, including fuzz testing, CI pipeline setup.}
-        \resumeItem{Working with Agile methodologies, including Scrum.}
+        \resumeItem{Worked in 2 areas of software, cloud software and embedded software }
+        \resumeItem{Cloud software developed to connect Dyson products to mobile app; tech stack: .NET/C#, node.js, Cloudformation(AWS infra structure as code)}
+        \resumeItem{Embedded Software work was focused on cryptography and Bluetooth connectivity. Written in C and auxilary testing with Python based tooling}
+        \resumeItem{Working with Agile methodologies}
       \resumeItemListEnd
   
     \resumeSubheading
       {Ashburton Finance}{London, UK}
       {Founder}{Sep 2021 - Nov 2021}
       \resumeItemListStart
-        \resumeItem{Founded a venture for lending of cryptocurrencies. Concept was based around aggregating flash loans from different flash loan providers. \href{https://github.com/Ashburton-Finance/flash-aggregator}{\raisebox{-0.1\height}\faExternalLink }}
-        \resumeItem{Developed product on the Solana blockchain, using Smart Contracts, Typescript, Rust and Anchor framework.}
+        \resumeItem{Worked on a venture for lending of cryptocurrencies. Concept was based around aggregating flash loans from different flash loan providers. \href{https://github.com/Ashburton-Finance/flash-aggregator}{\raisebox{-0.1\height}\faExternalLink }}
         \resumeItem{Moved on as it did not make much business sense to pursue it further at that time.}
-
       \resumeItemListEnd
   
     \resumeSubheading
@@ -201,9 +198,9 @@
       {Embedded Hardware/Software Engineer Intern}{June 2021 - Sep 2021}
       \resumeItemListStart
         \resumeItem{Worked in a team to develop a high performance, innovative electric bicycle.}
-        \resumeItem{Worked on wireless connectivity, datalogging with custom hardware/firmware (C++); Designed and built battery packs}
-        \resumeItem{Developed algorithms for energy consumption prediction, using physics models and machine learning.}
-        \resumeItem{Created visualisation of battery performance/power consumption with InfluxDB \& Grafana for performance characterisation.}
+        \resumeItem{Developed hardware and firmware(C++) for wireless connectivity, telemetry}
+        \resumeItem{Designed and built battery packs, along with software for accurate energy consumption prediction}
+        \resumeItem{Data visualisation with InfluxDB \& Grafana, with Python tools}
       \resumeItemListEnd
 
     \resumeSubheading
@@ -211,10 +208,7 @@
       {Design Engineer Intern}{May 2020 - Sep 2020}
       \resumeItemListStart
         \resumeItem{Worked in a team developing a camera meant for cyclists; Worked on hardware/firmware for device and web interface (Django \& Python).}
-        \resumeItem{Worked in embedded software development (C \& Python), playing a part in software architecture, version control, release process management, issue tracking, software testing and collaboration with hardware engineering colleagues.}
-        \resumeItem{Did data analysis with Plotly dashboards and wrote programs for automated video processing.}
         \resumeItem{Carried out product testing, user interviews to get user feedback for improvements.}
-        \resumeItem{Did mechanical design work, hand assembled prototypes, printed circuit board assembly, inspection and testing.}
       \resumeItemListEnd
 
   \resumeSubHeadingListEnd
@@ -228,23 +222,6 @@
           \resumeItemListStart
             \resumeItem{\normalsize{Led a team to fly a small hydrogen balloon around the world on the Jet stream. Longest flight was for 22 days, flying over Japan, Canada, America and Europe. The tracker we designed was powered by solar, and transmited position fixes via radio (LoRaWAN) to gateways worldwide.}}
           \resumeItemListEnd
-
-          \vspace{-13pt}
-
-        \resumeProjectHeading
-          {\href{https://www.union.ic.ac.uk/guilds/icseds/2019/12/pulling-image-data-from-orbiting-noaa-satellites/}{\textbf{\large{\underline{Weather satellite data downlink}}} \href{https://www.union.ic.ac.uk/guilds/icseds/2019/12/pulling-image-data-from-orbiting-noaa-satellites/}{\raisebox{-0.1\height}\faExternalLink }} $|$ \large{\underline{Antenna Design, SDR radios}}}{2019}
-          \resumeItemListStart
-            \resumeItem{\normalsize{Worked with members of the university space society to build an antenna to receive live weather images from overhead NOAA satellites. Received imagery data from satellites in multiple passes over Hyde Park, London.}}
-        \resumeItemListEnd
-
-        \vspace{-13pt}
-
-        \resumeProjectHeading
-          {\href{https://medadnewman.co.uk/2021/10/05/shamir-secret-sharing-scheme-2/}{\textbf{\large{\underline{Shamir Secret Sharing Scheme exploration}}} \href{https://medadnewman.co.uk/2021/10/05/shamir-secret-sharing-scheme-2/}{\raisebox{-0.1\height}\faExternalLink }} $|$ \large{\underline{Cryptography, Python}}}{2015}
-          \resumeItemListStart
-            \resumeItem{\normalsize{ Did a writeup on the Shamir Secret Sharing Scheme - a scheme to split a secret into \begin{math}n\end{math} shares, but requires a minimum of \begin{math}t\end{math} shares to recombine and recover the original secret. Did a Python implementation of the scheme as well.}}
-        \resumeItemListEnd
-                    
     \resumeSubHeadingListEnd
 \vspace{-12pt}
 
