clean up further

--- a/Medad_Rufus_Newman_CV.tex
+++ b/Medad_Rufus_Newman_CV.tex
@@ -148,28 +148,15 @@
 
 
 \begin{center}
-    {\Huge \scshape Medad Rufus Newman (call me Rufus)} \\ \vspace{1pt}
+    {\Huge \scshape Medad Rufus Newman} \\ \vspace{1pt}
     Bristol, UK \\ \vspace{1pt}
     \small \href{tel:+447435651280}{ \raisebox{-0.1\height}\faPhone\ \underline{+44 7435651280} ~}
-    \href{mailto:rufus@medadnewman.co.uk}{\raisebox{-0.2\height}\faEnvelope\  \underline{rufus@medadnewman.co.uk}} ~ 
+    \href{mailto:medad@medadnewman.co.uk}{\raisebox{-0.2\height}\faEnvelope\  \underline{medad@medadnewman.co.uk}} ~ 
     \href{https://medadnewman.co.uk}{\raisebox{-0.2\height}\faLink\  \underline{medadnewman.co.uk}} ~ 
     \href{https://github.com/MedadRufus}{\raisebox{-0.2\height}\faGithub\ \underline{MedadRufus}} ~
     \vspace{-8pt}
 \end{center}
 
-
-%-----------EDUCATION-----------
-\section{EDUCATION}
-  \resumeSubHeadingListStart
-    \resumeSubheading
-      {Imperial College London}{London, UK}
-      {Masters in Design Engineering, 2:1}{Sep. 2017 -- July 2021}
-      \resumeItemListStart
-        \resumeItem{Thesis on predicting E-bike energy consumption with machine learning. Using: XGBoost, Pandas, NumPy, SciPy. {\href{https://medadnewman.co.uk/2021/10/06/e-bike-energy-consumption-prediction-with-past-data/}{\raisebox{-0.1\height}\faExternalLink }}}
-        \resumeItem{Hands on experience designing hardware to launching engaging web experiences.}
-      \resumeItemListEnd
-
-  \resumeSubHeadingListEnd
 
 %-----------EXPERIENCE-----------------
 \section{EXPERIENCE}
@@ -179,10 +166,10 @@
       {Dyson}{Hullavington, UK}
       {Graduate Software Engineer}{Feb 2022 - Present}
       \resumeItemListStart
-        \resumeItem{Worked in 2 areas of software, cloud software and embedded software }
-        \resumeItem{Cloud software developed to connect Dyson products to mobile app; tech stack: .NET/C#, node.js, Cloudformation(AWS infra structure as code)}
-        \resumeItem{Embedded Software work was focused on cryptography and Bluetooth connectivity. Written in C and auxilary testing with Python based tooling}
-        \resumeItem{Working with Agile methodologies}
+        \resumeItem{Worked in 2 areas of software, Cloud software and Embedded software }
+        \resumeItem{Cloud software developed to host backend of MyDyson mobile app; Tech stack: .NET/C#, Node.js, React, Docker, Cloudformation(AWS IaC)}
+        \resumeItem{Embedded Software work was on cryptography and Bluetooth connectivity. Tech stack: C, Python, Ceedling, Behave}
+        \resumeItem{Active in researching new techniques, including Fuzzing and automated code compliance checks}
       \resumeItemListEnd
   
     \resumeSubheading
@@ -190,6 +177,7 @@
       {Founder}{Sep 2021 - Nov 2021}
       \resumeItemListStart
         \resumeItem{Worked on a venture for lending of cryptocurrencies. Concept was based around aggregating flash loans from different flash loan providers. \href{https://github.com/Ashburton-Finance/flash-aggregator}{\raisebox{-0.1\height}\faExternalLink }}
+        \resumeItem{Tech stack: Rust, Node.js, Solana blockchain}
         \resumeItem{Moved on as it did not make much business sense to pursue it further at that time.}
       \resumeItemListEnd
   
@@ -199,16 +187,17 @@
       \resumeItemListStart
         \resumeItem{Worked in a team to develop a high performance, innovative electric bicycle.}
         \resumeItem{Developed hardware and firmware(C++) for wireless connectivity, telemetry}
-        \resumeItem{Designed and built battery packs, along with software for accurate energy consumption prediction}
-        \resumeItem{Data visualisation with InfluxDB \& Grafana, with Python tools}
+        \resumeItem{Designed and built battery packs, along with software for energy consumption prediction}
+        \resumeItem{Data visualisation with InfluxDB \& Grafana}
       \resumeItemListEnd
 
     \resumeSubheading
       {Onsee (formerly Pelation)}{London, UK}
       {Design Engineer Intern}{May 2020 - Sep 2020}
       \resumeItemListStart
-        \resumeItem{Worked in a team developing a camera meant for cyclists; Worked on hardware/firmware for device and web interface (Django \& Python).}
+        \resumeItem{Worked in a team developing a camera meant for cyclists; Worked on hardware/firmware(C/Python) for device and web interface (Django).}
         \resumeItem{Carried out product testing, user interviews to get user feedback for improvements.}
+        \resumeItem{MVP product launched in 4 months}
       \resumeItemListEnd
 
   \resumeSubHeadingListEnd
@@ -225,15 +214,28 @@
     \resumeSubHeadingListEnd
 \vspace{-12pt}
 
+%-----------EDUCATION-----------
+\section{EDUCATION}
+  \resumeSubHeadingListStart
+    \resumeSubheading
+      {Imperial College London}{London, UK}
+      {Masters in Design Engineering, 2:1}{Sep. 2017 -- July 2021}
+      \resumeItemListStart
+        \resumeItem{Thesis on predicting E-bike energy consumption with machine learning. Using: XGBoost, Pandas, NumPy, SciPy. {\href{https://medadnewman.co.uk/2021/10/06/e-bike-energy-consumption-prediction-with-past-data/}{\raisebox{-0.1\height}\faExternalLink }}}
+        \resumeItem{Hands on experience designing hardware to launching engaging web experiences.}
+      \resumeItemListEnd
+
+  \resumeSubHeadingListEnd
+
 %-----------PROGRAMMING SKILLS-----------
 \section{TECHNICAL SKILLS}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{\normalsize{Languages:}}{ \normalsize{Python, C, C++, Java, Rust, Javascript(React)}} \\
-     \textbf{\normalsize{Databases:}}{\normalsize{ MongoDB, InfluxDB }} \\
+     \textbf{\normalsize{Languages:}}{ \normalsize{Python, C, C#, Node.js}} \\
+     \textbf{\normalsize{Databases:}}{\normalsize{ MongoDB, InfluxDB, DynamoDB}} \\
      \textbf{\normalsize{Visualisation tools:}}{\normalsize{ Grafana, Seaborn, Plotly }} \\
      \textbf{\normalsize{Technologies/Frameworks:}}{\normalsize{ Docker, Git, Linux, Pytest, CppUTest, SciPy, NumPy, Pandas, JupyterLab }} \\
-     \textbf{\normalsize{Tooling:}}{\normalsize{ Atlassian toolset, Github, Gitlab CI/CD pipelines, Agile working}} \\
+     \textbf{\normalsize{Tooling:}}{\normalsize{ Atlassian toolset, Github, Agile working}} \\
     }}
  \end{itemize}
  \vspace{-15pt}
