--- a/Medad_Rufus_Newman_CV.tex
+++ b/Medad_Rufus_Newman_CV.tex
@@ -166,10 +166,10 @@
       {Dyson}{Hullavington, UK}
       {Graduate Software Engineer}{Feb 2022 - Present}
       \resumeItemListStart
-        \resumeItem{Worked in 2 areas of software, Cloud software and Embedded software }
-        \resumeItem{Cloud software developed to host backend of MyDyson mobile app; Tech stack: .NET/C#, Node.js, React, Docker, Cloudformation(AWS IaC)}
-        \resumeItem{Embedded Software work was on cryptography and Bluetooth connectivity. Tech stack: C, Python, Ceedling, Behave}
-        \resumeItem{Active in researching new techniques, including Fuzzing and automated code compliance checks}
+        \resumeItem{Worked in 2 areas, Cloud software and Embedded software. }
+        \resumeItem{Backend cloud software developed for MyDyson\texttrademark{} mobile app. Allows user interaction with Dyson products via the App. Tech stack: .NET/C\#, Node.js, React, Docker, Cloudformation(AWS IaC). Hosted on AWS. }
+        \resumeItem{Embedded Software work to develop libraries for cryptography and Bluetooth connectivity. Tech stack: C, Python, Ceedling, Behave.}
+        \resumeItem{Active in researching new techniques, including fuzzing and automated code compliance checks.}
       \resumeItemListEnd
   
     \resumeSubheading
@@ -177,7 +177,7 @@
       {Founder}{Sep 2021 - Nov 2021}
       \resumeItemListStart
         \resumeItem{Worked on a venture for lending of cryptocurrencies. Concept was based around aggregating flash loans from different flash loan providers. \href{https://github.com/Ashburton-Finance/flash-aggregator}{\raisebox{-0.1\height}\faExternalLink }}
-        \resumeItem{Tech stack: Rust, Node.js, Solana blockchain}
+        \resumeItem{Tech stack: Rust, Node.js, Solana blockchain.}
         \resumeItem{Moved on as it did not make much business sense to pursue it further at that time.}
       \resumeItemListEnd
   
@@ -186,9 +186,9 @@
       {Embedded Hardware/Software Engineer Intern}{June 2021 - Sep 2021}
       \resumeItemListStart
         \resumeItem{Worked in a team to develop a high performance, innovative electric bicycle.}
-        \resumeItem{Developed hardware and firmware(C++) for wireless connectivity, telemetry}
-        \resumeItem{Designed and built battery packs, along with software for energy consumption prediction}
-        \resumeItem{Data visualisation with InfluxDB \& Grafana}
+        \resumeItem{Developed hardware and firmware(C++) for wireless connectivity, telemetry.}
+        \resumeItem{Designed and built battery packs, along with software for energy consumption prediction.}
+        \resumeItem{Data visualisation with Grafana \& InfluxDB.}
       \resumeItemListEnd
 
     \resumeSubheading
@@ -197,7 +197,21 @@
       \resumeItemListStart
         \resumeItem{Worked in a team developing a camera meant for cyclists; Worked on hardware/firmware(C/Python) for device and web interface (Django).}
         \resumeItem{Carried out product testing, user interviews to get user feedback for improvements.}
-        \resumeItem{MVP product launched in 4 months}
+        \resumeItem{MVP product launched in 4 months, a very short time for a hardware product.}
+      \resumeItemListEnd
+
+  \resumeSubHeadingListEnd
+
+
+%-----------EDUCATION-----------
+\section{EDUCATION}
+  \resumeSubHeadingListStart
+    \resumeSubheading
+      {Imperial College London}{London, UK}
+      {Masters in Design Engineering, 2:1}{Sep. 2017 -- July 2021}
+      \resumeItemListStart
+        \resumeItem{Thesis on predicting E-bike energy consumption with machine learning {\href{https://medadnewman.co.uk/2021/10/06/e-bike-energy-consumption-prediction-with-past-data/}{\raisebox{-0.1\height}\faExternalLink }}. Using: XGBoost, Pandas, NumPy, SciPy. }
+        \resumeItem{Course gave me hands on experience designing hardware to launching engaging web experiences.}
       \resumeItemListEnd
 
   \resumeSubHeadingListEnd
@@ -214,27 +228,14 @@
     \resumeSubHeadingListEnd
 \vspace{-12pt}
 
-%-----------EDUCATION-----------
-\section{EDUCATION}
-  \resumeSubHeadingListStart
-    \resumeSubheading
-      {Imperial College London}{London, UK}
-      {Masters in Design Engineering, 2:1}{Sep. 2017 -- July 2021}
-      \resumeItemListStart
-        \resumeItem{Thesis on predicting E-bike energy consumption with machine learning. Using: XGBoost, Pandas, NumPy, SciPy. {\href{https://medadnewman.co.uk/2021/10/06/e-bike-energy-consumption-prediction-with-past-data/}{\raisebox{-0.1\height}\faExternalLink }}}
-        \resumeItem{Hands on experience designing hardware to launching engaging web experiences.}
-      \resumeItemListEnd
-
-  \resumeSubHeadingListEnd
-
 %-----------PROGRAMMING SKILLS-----------
 \section{TECHNICAL SKILLS}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{\normalsize{Languages:}}{ \normalsize{Python, C, C#, Node.js}} \\
+     \textbf{\normalsize{Languages:}}{ \normalsize{Python, C, C\#, Node.js}} \\
      \textbf{\normalsize{Databases:}}{\normalsize{ MongoDB, InfluxDB, DynamoDB}} \\
      \textbf{\normalsize{Visualisation tools:}}{\normalsize{ Grafana, Seaborn, Plotly }} \\
-     \textbf{\normalsize{Technologies/Frameworks:}}{\normalsize{ Docker, Git, Linux, Pytest, CppUTest, SciPy, NumPy, Pandas, JupyterLab }} \\
+     \textbf{\normalsize{Technologies/Frameworks:}}{\normalsize{ Docker, Git, Linux, SciPy, NumPy, Pandas, JupyterLab }} \\
      \textbf{\normalsize{Tooling:}}{\normalsize{ Atlassian toolset, Github, Agile working}} \\
     }}
  \end{itemize}
