--- a/Medad_Rufus_Newman_CV.tex
+++ b/Medad_Rufus_Newman_CV.tex
@@ -208,10 +208,10 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Imperial College London}{London, UK}
-      {Masters in Design Engineering, 2:1}{Sep. 2017 -- July 2021}
+      {Masters in Design Engineering, 2:1}{Sep. 2017 -- June 2021}
       \resumeItemListStart
         \resumeItem{Thesis on predicting E-bike energy consumption with machine learning {\href{https://medadnewman.co.uk/2021/10/06/e-bike-energy-consumption-prediction-with-past-data/}{\raisebox{-0.1\height}\faExternalLink }}. Using: XGBoost, Pandas, NumPy, SciPy. }
-        \resumeItem{Course gave me hands on experience designing hardware to launching engaging web experiences.}
+        \resumeItem{Subjects: Mechanics, Electronics, Materials and Manufacturing, Algorithms, Optimisation, Robotics, Human-Centred Design, Industrial Design and Business Strategy.}
       \resumeItemListEnd
 
   \resumeSubHeadingListEnd
@@ -223,7 +223,7 @@
        \resumeProjectHeading
           {\href{https://www.union.ic.ac.uk/guilds/icseds/2020/12/icspace22/}{\textbf{\large{\underline{High altitude balloon flights}}} \href{https://www.union.ic.ac.uk/guilds/icseds/2020/12/icspace22/}{\raisebox{-0.1\height}\faExternalLink }} $|$ \large{\underline{C, LoRaWAN}}}{2018 - present}
           \resumeItemListStart
-            \resumeItem{\normalsize{Led a team to fly a small hydrogen balloon around the world on the Jet stream. Longest flight was for 22 days, flying over Japan, Canada, America and Europe. The tracker we designed was powered by solar, and transmited position fixes via radio (LoRaWAN) to gateways worldwide.}}
+            \resumeItem{\normalsize{Led a team to fly a small hydrogen balloon around the world on the Jet stream. Longest flight was for 22 days, flying over Japan, Canada, America and Europe. The tracker we designed was powered by solar, and transmitted position fixes via radio (LoRaWAN) to gateways worldwide.}}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
 \vspace{-12pt}
