--- a/Medad_Rufus_Newman_CV.tex
+++ b/Medad_Rufus_Newman_CV.tex
@@ -167,9 +167,16 @@
       {Graduate Software Engineer}{Feb 2022 - Present}
       \resumeItemListStart
         \resumeItem{Worked in 2 areas, Cloud software and Embedded software. }
-        \resumeItem{Backend cloud software developed for MyDyson\texttrademark{} mobile app. Allows user interaction with Dyson products via the App. Tech stack: .NET/C\#, Node.js, React, Docker, Cloudformation(AWS IaC). Hosted on AWS. }
-        \resumeItem{Embedded Software work to develop libraries for cryptography and Bluetooth connectivity. Tech stack: C, Python, Ceedling, Behave.}
-        \resumeItem{Active in researching new techniques, including fuzzing and automated code compliance checks.}
+        \resumeItem{Developed back-end cloud software for the MyDyson\texttrademark{} mobile app. Allows user interaction with Dyson products via the App.}
+
+        \resumeItem{Embedded Software work was to develop libraries for cryptography and Bluetooth connectivity.}
+
+
+
+        \resumeItem{Active in internal community of practice groups, researching new techniques and beta testing new ways of working.}
+
+                \resumeItem{Cloud tech stack: .NET/C\#, Node.js, React, Docker, Cloudformation(AWS IaC). Hosted on AWS. }
+                         \resumeItem{Embedded tech stack: C, Python, Ceedling, Behave.}
       \resumeItemListEnd
   
     \resumeSubheading
