--- a/Medad_Rufus_Newman_CV.tex
+++ b/Medad_Rufus_Newman_CV.tex
@@ -169,11 +169,11 @@
         \resumeItem{Worked in 2 areas, Cloud software and Embedded software. }
         \resumeItem{Developed back-end cloud software for the MyDyson\texttrademark{} mobile app. Allows user interaction with Dyson products via the App.}
 
-        \resumeItem{Embedded Software work was to develop libraries for cryptography and Bluetooth connectivity.}
+        \resumeItem{Embedded Software work was to develop shared libraries for cryptography and Bluetooth connectivity.}
 
 
 
-        \resumeItem{Active in internal community of practice groups, researching new techniques and beta testing new ways of working.}
+        \resumeItem{Active in Communities of Practice(CoPs), researching new techniques and beta testing new ways of working.}
 
                 \resumeItem{Cloud tech stack: .NET/C\#, Node.js, React, Docker, Cloudformation(AWS IaC). Hosted on AWS. }
                          \resumeItem{Embedded tech stack: C, Python, Ceedling, Behave.}
@@ -237,17 +237,18 @@
 
 %-----------PROGRAMMING SKILLS-----------
 \section{TECHNICAL SKILLS}
- \begin{itemize}[leftmargin=0.15in, label={}]
-    \small{\item{
-     \textbf{\normalsize{Languages:}}{ \normalsize{Python, C, C\#, Node.js}} \\
-     \textbf{\normalsize{Databases:}}{\normalsize{ MongoDB, InfluxDB, DynamoDB}} \\
-     \textbf{\normalsize{Visualisation tools:}}{\normalsize{ Grafana, Seaborn, Plotly }} \\
-     \textbf{\normalsize{Technologies/Frameworks:}}{\normalsize{ Docker, Git, Linux, SciPy, NumPy, Pandas, JupyterLab }} \\
-     \textbf{\normalsize{Tooling:}}{\normalsize{ Atlassian toolset, Github, Agile working}} \\
-    }}
- \end{itemize}
+          \resumeItemListStart
+
+    \resumeItem{\textbf{Languages:}{ Python, C, C\#, Node.js}}
+     \resumeItem{\textbf{Databases:}{ MongoDB, InfluxDB, DynamoDB}}
+     \resumeItem{\textbf{Visualisation tools:}{ Grafana, Seaborn, Plotly}}
+     \resumeItem{\textbf{Technologies/Frameworks:}{ Docker, Git, Linux, SciPy, NumPy, Pandas, JupyterLab }}
+    \resumeItem{ \textbf{Tooling:}{ Atlassian toolset, Github, Agile working}}
+    
+      \resumeItemListEnd
  \vspace{-15pt}
 
  %-----------PROGRAMMING SKILLS-----------
 
 \end{document}
+Developed hardware and firmware(C++) for wireless connectivity, telemetry.
