--- a/Medad_Rufus_Newman_CV.tex
+++ b/Medad_Rufus_Newman_CV.tex
@@ -237,6 +237,8 @@
 
 %-----------PROGRAMMING SKILLS-----------
 \section{TECHNICAL SKILLS}
+    \resumeSubHeadingListStart
+
           \resumeItemListStart
 
     \resumeItem{\textbf{Languages:}{ Python, C, C\#, Node.js}}
@@ -246,6 +248,8 @@
     \resumeItem{ \textbf{Tooling:}{ Atlassian toolset, Github, Agile working}}
     
       \resumeItemListEnd
+          \resumeSubHeadingListEnd
+
  \vspace{-15pt}
 
  %-----------PROGRAMMING SKILLS-----------
