--- a/Medad_Rufus_Newman_CV.tex
+++ b/Medad_Rufus_Newman_CV.tex
@@ -121,7 +121,7 @@
 \newcommand{\resumeProjectHeading}[2]{
     \item
     \begin{tabular*}{1.001\textwidth}{l@{\extracolsep{\fill}}r}
-      \small#1 & \textbf{\small #2}\\
+      \textbf{\large#1} & \textbf{\small #2}\\
     \end{tabular*}\vspace{-7pt}
 }
 
@@ -228,7 +228,7 @@
     \vspace{-5pt}
     \resumeSubHeadingListStart
        \resumeProjectHeading
-          {\href{https://www.union.ic.ac.uk/guilds/icseds/2020/12/icspace22/}{\textbf{\large{\underline{High altitude balloon flights}}} \href{https://www.union.ic.ac.uk/guilds/icseds/2020/12/icspace22/}{\raisebox{-0.1\height}\faExternalLink }} $|$ \large{\underline{C, LoRaWAN}}}{2018 - present}
+          {\href{https://www.union.ic.ac.uk/guilds/icseds/2020/12/icspace22/}{\textbf{High altitude balloon flights} \href{https://www.union.ic.ac.uk/guilds/icseds/2020/12/icspace22/}{\raisebox{-0.1\height}\faExternalLink }} \large{\underline{}}}{2018 - present}
           \resumeItemListStart
             \resumeItem{\normalsize{Led a team to fly a small hydrogen balloon around the world on the Jet stream. Longest flight was for 22 days, flying over Japan, Canada, America and Europe. The tracker we designed was powered by solar, and transmitted position fixes via radio (LoRaWAN) to gateways worldwide.}}
           \resumeItemListEnd
