--- a/Medad_Rufus_Newman_CV.tex
+++ b/Medad_Rufus_Newman_CV.tex
@@ -167,16 +167,14 @@
       {Graduate Software Engineer}{Feb 2022 - Present}
       \resumeItemListStart
         \resumeItem{Worked in 2 areas, Cloud software and Embedded software. }
-        \resumeItem{Developed back-end cloud software for the MyDyson\texttrademark{} mobile app. Allows user interaction with Dyson products via the App.}
+        \resumeItem{Developed back-end cloud software for the MyDyson\texttrademark{} mobile app. Worked on updating APIs, adding monitoring, creating unittests/end-to-end tests for microservices and investigating new architectures for future products. Tech stack: .NET/C\#, Node.js, React, Docker, Cloudformation(AWS IaC). Hosted on AWS. }
 
-        \resumeItem{Embedded Software work was to develop shared libraries for cryptography and Bluetooth connectivity.}
+        \resumeItem{Embedded Software work was to develop shared libraries for cryptography and Bluetooth connectivity that can be used across multiple products. Tech stack: C, Python, Ceedling, Behave.}
 
 
 
-        \resumeItem{Active in Communities of Practice(CoPs), researching new techniques and beta testing new ways of working.}
+        \resumeItem{Active in Communities of Practice(CoPs), researching new techniques for automation and beta testing new ways of working.}
 
-                \resumeItem{Cloud tech stack: .NET/C\#, Node.js, React, Docker, Cloudformation(AWS IaC). Hosted on AWS. }
-                         \resumeItem{Embedded tech stack: C, Python, Ceedling, Behave.}
       \resumeItemListEnd
   
     \resumeSubheading
